--- a/src/components/Homecontact/Homecontact.css
+++ b/src/components/Homecontact/Homecontact.css
@@ -1,5 +1,5 @@
 .homecontact {
-    padding:8px 0;
+    padding:17px 0 8px;
     width: 303.5px;
     /* max-width:360px; */
     min-width:280px;
@@ -32,7 +32,8 @@
 }
 
 .birthdaytitle{
-    padding: 17px 16px 4px 15.5px;
+    /* padding: 17px 16px 4px 15.5px; */
+    padding: 8px 16px 4px 15.5px;
     color: #65676B;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
