--- a/src/components/Homeleftnav/Homeleftnav.css
+++ b/src/components/Homeleftnav/Homeleftnav.css
@@ -31,7 +31,7 @@
 }
 
 .homeleftnavlist a div {
-    height: 44px;
+    height: 44px !important;
     font-size: 15px;
     padding: 0 8px;
     display: flex;
