--- a/src/components/Signupdialogbox/Signup.css
+++ b/src/components/Signupdialogbox/Signup.css
@@ -3,11 +3,13 @@
     width:432px;
     background-color: white;
     font-family:var(--font);
+    /* margin: 20px; */
+    border-radius: 8px  ;
 }
 .signup img{
     float: right;
     z-index: 2;
-    padding:10px 16px;
+    padding:12px 10px;
 }
 .signup-top div:nth-child(1){
     font-size: 32px;
@@ -17,6 +19,8 @@
 .signup-top div:nth-child(2){
     font-size: 15px;
     color: #606770;
+    margin-top: 3px;
+    margin-bottom: 4px;
 }
 .signup-top{
     padding: 10px 16px;
@@ -27,14 +31,14 @@
     padding: 16px;
 }
 
-.signup_firstname,.signup_lastname{
-    margin:0 10px 10px 0;
+.signup_firstname{
+    margin:0 11px 10px 0;
 }
 .signup_firstname input, .signup_lastname input,.signup_email input{
     padding:11px;
     width: 170px;
-    font-size: 15px;
-    line-height: 16px;
+    font-size: 15px !important;
+    line-height: 16px !important;
     font:var(--font);
     background-color: #f5f6f7;
     outline: none;
@@ -48,4 +52,110 @@
 }
 .signup_email{
     margin-bottom: 10px;
+}
+.signup_dateheading,.signup_genderheading{
+    font-size: 12px;
+    color: #606770;
+    font-family:var(--font);
+    margin-top: 2px;
+    line-height: 20px;
+}
+.signup_dateheading{
+    margin-top: 12px !important;
+}
+.signup_dateheading i{
+    background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/y4/r/EV7ny501e-i.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    background-position: 0 -60px;
+    margin-left: 4px;
+}
+.signup_date{
+    gap: 12px;
+    margin-bottom: 10px;
+}
+.signup_date select{
+    color: #1c1e21;
+    font-family:var(--font);
+    font-size: 15px;
+    font-weight: normal;
+    height: 36px;
+    line-height: 20px;
+    border-radius: 4px;
+    appearance: none;
+    background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/yP/r/Yrq8Y9PlN02.png);
+    background-position: right 5px center;
+    background-repeat: no-repeat;
+    background-size: 14px;
+    padding: 0 20px 0 8px;
+    width: 125px;
+    background-color: #fff;
+    border-color: #ccd0d5;
+    outline: none;
+}
+.signup_genderheading i{
+    width: 12px;
+    height: 12px;
+    background-position: 0 -60px;
+    background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/y4/r/EV7ny501e-i.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    display: inline-block;
+    margin-left: 4px;
+}
+.signup_date label{
+    box-sizing: border-box;
+    color: #1c1e21;
+    font-family:var(--font);
+    font-size: 15px;
+    line-height: 36px;
+    padding: 0 10px 0 10px;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #ccd0d5;
+    flex: 1 0 auto;
+    border-radius: 5px;
+}
+.signup_para{
+    color: #777;
+    font-size: 11px;
+    margin-top: 11px;
+    line-height:14.74px;
+}
+.signup_para span{
+     color: #385898;
+}
+.signup_para span:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+.signup_button{
+    margin-top: 21px;
+    margin-bottom: 10px;
+}
+.signup_button button{
+    padding: 0 32px;
+    background-color: #00a400;
+    border: none;
+    border-radius: 6px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    height: 36px;
+    font-weight: bold;
+    font-family: var(--font);
+    min-width: 194px;
+    cursor: pointer;
+
+  
+}
+.outer .MuiDialog-paper{
+    overflow-y:visible!important;
+    margin-top: 98px !important;
+}
+.outer .MuiDialog-paperScrollPaper{
+    max-height: 100% !important;
 }
