--- a/src/components/Friends/Pages/Friendrequest/Friendlrequestlist/Friendrequestlist.css
+++ b/src/components/Friends/Pages/Friendrequest/Friendlrequestlist/Friendrequestlist.css
@@ -14,6 +14,9 @@
 }
 .friendrequestlistright{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .friendrequestlistrighttitle h4{
     font-size: .9375rem;
@@ -43,4 +46,8 @@
 .friendrequestconfirmbutton{
     background-color: var(--bluecolor) !important;
     color: #fff;
+}
+.friendrequestlistaccept{
+    color: #65676B;
+    font-size: .8125rem;
 }
